--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express": "^4.17.3",
     "mongo": "^0.1.0",
     "mongodb": "^4.4.1",
-    "mongoose": "^6.2.4"
+    "mongoose": "^6.2.4",
+    "node": "^17.5.0"
   }
 }
