--- a/package.json
+++ b/package.json
@@ -20,9 +20,7 @@
   "homepage": "https://github.com/noahfred97/Challenge-18#readme",
   "dependencies": {
     "express": "^4.17.3",
-    "mongo": "^0.1.0",
-    "mongodb": "^4.4.1",
-    "mongoose": "^6.2.4",
-    "node": "^17.5.0"
+    "mongoose": "^6.2.4"
+    
   }
 }
